--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-github-calendar": "^5.0.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
