--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-github-calendar": "^5.0.5",
+    "react-tooltip": "^5.30.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
