--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "next-share": "^0.27.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
