--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-fast-marquee": "^1.6.5",
     "sonner": "^2.0.7",
     "swiper": "^12.1.1",
     "tailwind-merge": "^3.4.0"
