feat: Implement `CreativeSection`, `ProjectsSection`, global loading UI with `LoadingScreen`, `FallbackCard` component, and integrate `framer-motion`.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.34.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
